--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.loopj.android:android-async-http:1.4.6'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.squareup.picasso:picasso:2.3.4'
+    compile 'com.squareup:otto:1.3.5'
 }
