Add recyclerview and carview libs Add function to show list of feched items

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:allowBackup="false">
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="kg.android.instagram.LoginActivity"
+            android:name=".activities.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +19,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="kg.android.instagram.InstagramImageInfoActivity"
+            android:name=".InstagramImageInfoActivity"
             android:label="@string/title_activity_instagram_image_info" >
+        </activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/title_activity_main" >
         </activity>
     </application>
 
