Extracted configurations to build.gradle file Deleted InstagramImageInfoActivity.java and ApplicationData.java

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,11 @@ android {
         versionName "1.0"
     }
     buildTypes {
+        debug {
+            buildConfigField "String", "CLIENT_ID", "379d744556c743c090c8a2014779f59f"
+            buildConfigField "String", "CLIENT_SECRET", "fd6ec75e44054da1a5088ad2d72f2253"
+            buildConfigField "String", "CALLBACK_URL", "instagram://connect"
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
