--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.spalmalo.topchart"
+        applicationId "kg.android.instagram"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.jakewharton.timber:timber:3.1.0'
 }
