--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.jakewharton.rxbinding:rxbinding:0.1.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.facebook.fresco:fresco:0.6.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
-    compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.jakewharton.timber:timber:3.1.0'
 }
